--- a/global.css
+++ b/global.css
@@ -66,3 +66,134 @@ header {
     align-items: center;
     gap: 16px;
 }
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 112px;
+}
+
+.aiInternet {
+    display: flex;
+    width: 1040px;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid white;
+
+}
+
+.ai-photo {
+    width: 381px;
+    height: 358px;
+    flex-shrink: 0;
+}
+
+.ai-info {
+    display: flex;
+    width: 564px;
+    height: 376px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    flex-shrink: 0;
+
+}
+
+.heading {
+    display: inline-block;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 56px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.heading-span {
+    display: inline-block;
+    width: 546px;
+    color: #7A7A7A;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+}
+
+.info-buttons {
+    width: 416px;
+    height: 48px;
+    display: flex;
+    align-items: flex-start;
+    gap: 16px;
+}
+
+.create-btn {
+    display: flex;
+    width: 200px;
+    padding: 12px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 24px;
+    background: #FF371A;
+    color: #FFF;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    border: none;
+}
+
+.get-btn {
+    display: flex;
+    width: 200px;
+    padding: 12px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 24px;
+    border: 1px solid #2F2C33;
+    color: #FFF;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    background: none;
+    line-height: 24px;
+}
+
+.heading-span-2 {
+    display: inline-block;
+    width: 546px;
+    color: #7A7A7A;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+}
+
+.socials {
+    display: flex;
+    align-items: center;
+    gap: 32px;
+}
+
+.EternalAI {
+    display: flex;
+    width: 1040px;
+    height: 769px;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+    border: 1px solid white;
+}
+
+.ai-heading {
+    width: 900px;
+    color: #FFF;
+    text-align: center;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
